--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
             const handleLogin = () => {
                 if (email === MOCK_CREDENTIALS.email && password === MOCK_CREDENTIALS.password) {
-                    const user = { email, name: 'Dr. Smith' };
+                    const user = { email, name: 'Dr. Saman' };
                     Storage.setItem('currentUser', user);
                     onLogin(user);
                 } else {
